--- a/css my.css
+++ b/css my.css
@@ -11,7 +11,7 @@ html, body {
 
     margin: 0;
 
-  background: url("https://avatars.mds.yandex.net/get-images-cbir/1625963/_9yRoU6hlfd-PL3YvJZALg8459/ocr");
+  background: url("https://trikky.ru/wp-content/blogs.dir/1/files/2023/07/22/1632996990-14-mykaleidoscope-ru-2.jpg");
 
   background-size: cover;
 
