--- a/css my.css
+++ b/css my.css
@@ -11,7 +11,7 @@ html, body {
 
     margin: 0;
 
-  background: url("https://trikky.ru/wp-content/blogs.dir/1/files/2023/07/22/1632996990-14-mykaleidoscope-ru-2.jpg");
+  background: url("https://w.forfun.com/fetch/d3/d3810547291cf0bf5b19f7041141d989.jpeg");
 
   background-size: cover;
 
