--- a/css my.css
+++ b/css my.css
@@ -107,7 +107,7 @@ html, body {
 
     line-height: 1.4;
 
-    color: black;
+    color: white;
 
 }
 
@@ -167,7 +167,7 @@ h2 {
 
   text-transform: lowercase;
 
-  color: gray;
+  color: white;
 
 }
 
