--- a/Css 2.css
+++ b/Css 2.css
@@ -23,7 +23,7 @@ header #headline, header #circular-bg {
 }
 body {
 
-  background-image: url "https://uprostim.com/wp-content/uploads/2021/04/image151-13-scaled.jpg";
+  background-image: url "https://fonoteka.top/uploads/posts/2022-01/1643640318_81-phonoteka-org-p-temnii-matovii-fon-87.jpg";
 
   font-family: "Roboto", sans-serif;
 
@@ -103,7 +103,7 @@ header #brand:before {
 
   height: 60px;
 
-  background-image: url("https://uprostim.com/wp-content/uploads/2021/04/image151-13-scaled.jpg");
+  background-image: url("https://fonoteka.top/uploads/posts/2022-01/1643640318_81-phonoteka-org-p-temnii-matovii-fon-87.jpg");
 
   bottom: -10px;
 
